[tool.poetry]
name = "cryptography"
version = "0.1.0"
description = ""
authors = ["Alex Peña <attn.alex.p@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.4"
pytest = "^6.2.1"
nltk = "^3.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
